more attribute changes
