# api/impl/openapi_server/models/hic.py
@@ -15,31 +15,36 @@ class HIC(Model):
     Do not edit the class manually.
     """
 
-    def __init__(self, healthcare_provider_id=None, firstname=None, surname=None):  # noqa: E501
+    def __init__(self, healthcare_provider_id=None, name=None, creation_date=None, deactivation_date=None):  # noqa: E501
         """HIC - a model defined in OpenAPI
 
         :param healthcare_provider_id: The healthcare_provider_id of this HIC.  # noqa: E501
         :type healthcare_provider_id: str
-        :param firstname: The firstname of this HIC.  # noqa: E501
-        :type firstname: str
-        :param surname: The surname of this HIC.  # noqa: E501
-        :type surname: str
+        :param name: The name of this HIC.  # noqa: E501
+        :type name: str
+        :param creation_date: The creation_date of this HIC.  # noqa: E501
+        :type creation_date: date
+        :param deactivation_date: The deactivation_date of this HIC.  # noqa: E501
+        :type deactivation_date: date
         """
         self.openapi_types = {
             'healthcare_provider_id': str,
-            'firstname': str,
-            'surname': str
+            'name': str,
+            'creation_date': date,
+            'deactivation_date': date
         }
 
         self.attribute_map = {
             'healthcare_provider_id': 'healthcare_provider_id',
-            'firstname': 'firstname',
-            'surname': 'surname'
+            'name': 'name',
+            'creation_date': 'creation_date',
+            'deactivation_date': 'deactivation_date'
         }
 
         self._healthcare_provider_id = healthcare_provider_id
-        self._firstname = firstname
-        self._surname = surname
+        self._name = name
+        self._creation_date = creation_date
+        self._deactivation_date = deactivation_date
 
     @classmethod
     def from_dict(cls, dikt) -> 'HIC':
@@ -74,43 +79,64 @@ class HIC(Model):
         self._healthcare_provider_id = healthcare_provider_id
 
     @property
-    def firstname(self):
-        """Gets the firstname of this HIC.
+    def name(self):
+        """Gets the name of this HIC.
 
 
-        :return: The firstname of this HIC.
+        :return: The name of this HIC.
         :rtype: str
         """
-        return self._firstname
+        return self._name
 
-    @firstname.setter
-    def firstname(self, firstname):
-        """Sets the firstname of this HIC.
+    @name.setter
+    def name(self, name):
+        """Sets the name of this HIC.
 
 
-        :param firstname: The firstname of this HIC.
-        :type firstname: str
+        :param name: The name of this HIC.
+        :type name: str
         """
 
-        self._firstname = firstname
+        self._name = name
 
     @property
-    def surname(self):
-        """Gets the surname of this HIC.
+    def creation_date(self):
+        """Gets the creation_date of this HIC.
 
 
-        :return: The surname of this HIC.
-        :rtype: str
+        :return: The creation_date of this HIC.
+        :rtype: date
         """
-        return self._surname
+        return self._creation_date
 
-    @surname.setter
-    def surname(self, surname):
-        """Sets the surname of this HIC.
+    @creation_date.setter
+    def creation_date(self, creation_date):
+        """Sets the creation_date of this HIC.
 
 
-        :param surname: The surname of this HIC.
-        :type surname: str
+        :param creation_date: The creation_date of this HIC.
+        :type creation_date: date
         """
 
-        self._surname = surname
+        self._creation_date = creation_date
+
+    @property
+    def deactivation_date(self):
+        """Gets the deactivation_date of this HIC.
+
+
+        :return: The deactivation_date of this HIC.
+        :rtype: date
+        """
+        return self._deactivation_date
+
+    @deactivation_date.setter
+    def deactivation_date(self, deactivation_date):
+        """Sets the deactivation_date of this HIC.
+
+
+        :param deactivation_date: The deactivation_date of this HIC.
+        :type deactivation_date: date
+        """
+
+        self._deactivation_date = deactivation_date
