# api/impl/openapi_server/openapi/openapi.yaml
@@ -471,9 +471,13 @@ components:
       properties:
         healthcare_provider_id:
           type: string
-        firstname:
+        name:
           type: string
-        surname:
+        creation_date:
+          format: date
+          type: string
+        deactivation_date:
+          format: date
           type: string
       type: object
     HCO:
@@ -494,6 +498,10 @@ components:
       - description: |
           a physician regardless of their employment arrangement, hired by hospital or hired by their own practice
         properties:
+          firstname:
+            type: string
+          lastname:
+            type: string
           specialty:
             type: string
           licence_number:
